<resources>
    <string name="app_name">BVDTest</string>
    <string name="login_title">Login</string>
    <string name="hint_username">Your Username</string>
    <string name="hint_password">Your Password</string>
    <string name="signup_title">SignUp</string>
    <string name="forget_password_title">Forget Password ?</string>
    <string name="bottom_menu_profile">Profile</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_qr_scanner">QR Scanner</string>
    <string name="bottom_menu_logout">Logout</string>

    <string name="title_activity_fuel_site_detail">FuelSiteDetailActivity</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

</resources>